WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158419
[GTK] Hide GTK+ 2 plugins if GTK+ 2 plugin process was built but is not installed
https://bugs.webkit.org/show_bug.cgi?id=158419
Summary
[GTK] Hide GTK+ 2 plugins if GTK+ 2 plugin process was built but is not insta...
Michael Catanzaro
Reported
2016-06-06 08:04:19 PDT
Debian, Endless, and Ubuntu split the GTK+ 2 plugin process into a subpackage, so it might not be installed even if ENABLE_PLUGIN_PROCESS_GTK2 is true. All these distros are carrying a patch by Berto to hide GTK+ 2 plugins in this case. We recently split the GTK+ 2 plugin process into a subpackage on Fedora as well; it's installed by default for desktop users, but someone requested to be able to remove it for embedded devices that don't need it. We could add this patch downstream, but it'd be nice to upstream it instead so we don't have four distros all carrying the same patch.
Attachments
Patch
(3.13 KB, patch)
2016-06-06 09:25 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Patch
(3.06 KB, patch)
2016-06-06 10:55 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2016-06-06 09:25:43 PDT
Created
attachment 280598
[details]
Patch
Michael Catanzaro
Comment 2
2016-06-06 10:55:52 PDT
Created
attachment 280609
[details]
Patch
WebKit Commit Bot
Comment 3
2016-06-07 07:11:27 PDT
Comment on
attachment 280609
[details]
Patch Clearing flags on attachment: 280609 Committed
r201749
: <
http://trac.webkit.org/changeset/201749
>
WebKit Commit Bot
Comment 4
2016-06-07 07:11:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug