[GTK] Hide GTK+ 2 plugins if GTK+ 2 plugin process was built but is not installed https://bugs.webkit.org/show_bug.cgi?id=158419

Reviewed by Carlos Garcia Campos.


* UIProcess/Plugins/unix/PluginInfoStoreUnix.cpp:
(WebKit::PluginInfoStore::getPluginInfo):
* UIProcess/Plugins/unix/PluginProcessProxyUnix.cpp:
(WebKit::PluginProcessProxy::scanPlugin):


Canonical link: https://commits.webkit.org/176535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201749 268f45cc-cd09-0410-ab3c-d52691b4dbfc